checkoutmyink.com (archived on 2009-11-04)
{
  "alexa_rank": 30774,
  "analysis_subcorpus": true,
  "categories": "entertainment",
  "char_count": 5005,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.14,
  "homepage_snapshot_redirected_domain": "checkoutmyink.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090901201751id_/http://www.checkoutmyink.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090901201751id_/http%3A//checkoutmyink.com",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "checkoutmyink.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20091104072602id_/http%3A//www.checkoutmyink.com/privacy",
  "policy_title": "Privacy Policy at Checkoutmyink.com",
  "policy_url": "checkoutmyink.com/privacy",
  "sha1": "0f799b111747318dcc2e3143aea45f009ce88ec0",
  "simhash": 4383277003751657554,
  "simhash_updated": false,
  "site_hostname": "checkoutmyink.com",
  "site_url": "http://checkoutmyink.com",
  "smog": 13.3,
  "strict_updated": false,
  "timestamp": "20091104072602",
  "word_count": 835,
  "year": 2009
}

--- a/c/ch/che/checkoutmyink.com.html
+++ b/c/ch/che/checkoutmyink.com.html
@@ -1,13 +1,19 @@
-<!--The following is the downloaded HTML source of the checkoutmyink.com privacy policy that was archived on 2009-06-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090617071646id_/http%3A//www.checkoutmyink.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the checkoutmyink.com privacy policy that was archived on 2009-11-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091104072602id_/http%3A//www.checkoutmyink.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>
 Privacy Policy at Checkoutmyink.com
 </title>
-<link href="/stylesheets/all.css?1245141800" media="screen" rel="stylesheet" type="text/css">
-<script src="/javascripts/all.js?1245141800" type="text/javascript"></script>
+<link href="http://www.checkoutmyink.com/stylesheets/all.css?1257302651" media="screen" rel="stylesheet" type="text/css">
+<script language="JavaScript">
+<!--
+OAS_sitepage = 'www.checkoutmyink.com/ROS';
+OAS_listpos = 'Top,Right';
+//-->
+</script>
+<script src="http://www.checkoutmyink.com/javascripts/all.js?1257302651" type="text/javascript"></script>
 
 
 </head>
@@ -15,77 +21,77 @@ Privacy Policy at Checkoutmyink.com
 <div id="top">
 <div id="header">
 <div id="head-title" onmouseover="$('dropdown_cats').hide();">
-<h1><a href="/" title="Beta means we are still tweaking out the site"><img alt="Header" src="/images/header.jpg?1245141778"></a></h1>
+<h1><a href="http://www.checkoutmyink.com/" title="Free Tattoo Design"><img alt="Free Tattoo Designs" src="http://www.checkoutmyink.com/images/header.jpg?1257302710"></a></h1>
 <p id="login_status"></p>
 <script>
-new Ajax.Updater('login_status', '/sessions/status?back_to=%2Fprivacy', {asynchronous:true, evalScripts:true})
+new Ajax.Updater('login_status', 'http://www.checkoutmyink.com/sessions/status?back_to=%2Fprivacy', {asynchronous:true, evalScripts:true})
 </script>
-<form id="pagesearch" method="get" action="/search">
+<form id="pagesearch" method="get" action="http://www.checkoutmyink.com/search">
 <input id="tag" name="tag" type="text" value="" onclick="this.value = '';">
-<input id="submit" value="Search Tattoos" type="submit">
+<input id="submit" value="Search Tattoos" type="submit" title="Tattoo Search">
 </form>
 </div>
 <ul id="navigation">
-<li><a onmouseover="$('dropdown_cats').hide()" href="/posts"><span>Fresh</span></a></li>
-<li><a href="javascript:void(0)" onmouseover="$('dropdown_cats').show()"><span>Categories</span></a></li>
-<li><a onmouseover="$('dropdown_cats').hide()" href="/members"><span>Members</span></a></li>
-<li><a onmouseover="$('dropdown_cats').hide()" href="/forums"><span>Forum</span></a></li>
-<li><a class="private" onmouseover="$('dropdown_cats').hide()" href="/submit"><span>Upload</span></a></li>
+<li><a onmouseover="$('dropdown_cats').hide()" href="http://www.checkoutmyink.com/posts"><span>Fresh</span></a></li>
+<li><a href="javascript:void(0)" onmouseover="$('dropdown_cats').show()"><span>Tattoos</span></a></li>
+<li><a onmouseover="$('dropdown_cats').hide()" href="http://www.checkoutmyink.com/members"><span>Members</span></a></li>
+<li><a onmouseover="$('dropdown_cats').hide()" href="http://www.checkoutmyink.com/forums"><span>Forum</span></a></li>
+<li><a class="private" onmouseover="$('dropdown_cats').hide()" href="http://www.checkoutmyink.com/submit"><span>Upload Tattoos</span></a></li>
 <li><a class="private" onmouseover="$('dropdown_cats').hide()" href="/home"><span>My Home</span></a></li>
 <li><a class="private" onmouseover="$('dropdown_cats').hide()" href="/account"><span>My Account</span></a></li>
 </ul>
 <ul id="dropdown_cats" style="display: none;">
 <!-- begin: category list-->
 <li>
-<a href="/category/asian-chinese" title="Asian Tattoos - Style, Symbol, Writing, Dragon, Art, Flower, Asian Girl, Tiger">Asian/Chinese</a>
+<a href="http://www.checkoutmyink.com/category/asian-chinese" title="Asian Tattoos - Style, Symbol, Writing, Dragon, Art, Flower, Asian Girl, Tiger">Asian/Chinese</a>
 </li>
 <li>
-<a href="/category/biomechanical" title="Biomechanical Tattoos, Flash Pics, Alien Design, Flesh, Pictures">Biomechanical</a>
+<a href="http://www.checkoutmyink.com/category/biomechanical" title="Biomechanical Tattoos, Flash Pics, Alien Design, Flesh, Pictures">Biomechanical</a>
 </li>
 <li>
-<a href="/category/black-ink" title="Black Light Ink Tattoo, Black Ink Tattoos, Natural Mineral Black Ink Tattoo">Black ink</a>
+<a href="http://www.checkoutmyink.com/category/black-ink" title="Black Light Ink Tattoo, Black Ink Tattoos, Natural Mineral Black Ink Tattoo">Black ink</a>
 </li>
 <li>
-<a href="/category/celebrity" title="Celebrity Tattoos - Female Celebrities, Rock Star, Flower, Photographs, Pictures">Celebrity</a>
+<a href="http://www.checkoutmyink.com/category/celebrity" title="Celebrity Tattoos - Female Celebrities, Rock Star, Flower, Photographs, Pictures">Celebrity</a>
 </li>
 <li>
-<a href="/category/celtic" title="Celtic Tattoo Designs - Cross, Butterfly, Knot, Dragon, Heart, Tree of Life">Celtic</a>
+<a href="http://www.checkoutmyink.com/category/celtic" title="Celtic Tattoo Designs - Cross, Butterfly, Knot, Dragon, Heart, Tree of Life">Celtic</a>
 </li>
 <li>
-<a href="/category/color" title="Color Tattoos - Living, Splash, Full Colour, Brown, Color Fading, Tribal">Color</a>
+<a href="http://www.checkoutmyink.com/category/color" title="Color Tattoos - Living, Splash, Full Colour, Brown, Color Fading, Tribal">Color</a>
 </li>
 <li>
-<a href="/category/fantasy" title="Tattoos - Fantasy Island, Fairies, Mermaid, Art, Woman, Final Fantasy, Flesh, Mushroom">Fantasy</a>
+<a href="http://www.checkoutmyink.com/category/fantasy" title="Tattoos - Fantasy Island, Fairies, Mermaid, Art, Woman, Final Fantasy, Flesh, Mushroom">Fantasy</a>
 </li>
 <li>
-<a href="/category/flash" title="Flash Tattoos">Flash</a>
+<a href="http://www.checkoutmyink.com/category/flash" title="Flash Tattoos">Flash</a>
 </li>
 <li>
-<a href="/category/lettering-writing" title="Lettering or Writing Tattoos">Lettering/Writing</a>
+<a href="http://www.checkoutmyink.com/category/lettering-writing" title="Lettering or Writing Tattoos">Lettering/Writing</a>
 </li>
 <li>
-<a href="/category/mashup" title="Mashup Tattoos">Mashup</a>
+<a href="http://www.checkoutmyink.com/category/mashup" title="Mashup Tattoos">Mashup</a>
 </li>
 <li>
-<a href="/category/other" title="Other Tattoos">Other</a>
+<a href="http://www.checkoutmyink.com/category/other" title="Other Tattoos">Other</a>
 </li>
 <li>
-<a href="/category/pin-ups" title="Pin-Ups Tattoos">Pin-Ups</a>
+<a href="http://www.checkoutmyink.com/category/pin-ups" title="Pin-Ups Tattoos">Pin-Ups</a>
 </li>
 <li>
-<a href="/category/portraits" title="Portrait Tattoos - Nordic, Religious and More">Portraits</a>
+<a href="http://www.checkoutmyink.com/category/portraits" title="Portrait Tattoos - Nordic, Religious and More">Portraits</a>
 </li>
 <li>
-<a href="/category/religious" title="Religious Tattoos Designs - Cross, Tribal, Galleries, Pictures, Flash, Christian">Religious</a>
+<a href="http://www.checkoutmyink.com/category/religious" title="Religious Tattoos Designs - Cross, Tribal, Galleries, Pictures, Flash, Christian">Religious</a>
 </li>
 <li>
-<a href="/category/symbols" title="Symbol Tattoos- Chinese, Japanese, Kanji, Egyptian, Friendship, Zodiac, Free Love, Celtic, Greek, Strength, Irish, Superman">Symbols</a>
+<a href="http://www.checkoutmyink.com/category/symbols" title="Symbol Tattoos- Chinese, Japanese, Kanji, Egyptian, Friendship, Zodiac, Free Love, Celtic, Greek, Strength, Irish, Superman">Symbols</a>
 </li>
 <li>
-<a href="/category/traditional" title="Traditional Tattoos">Traditional</a>
+<a href="http://www.checkoutmyink.com/category/traditional" title="Traditional Tattoos">Traditional</a>
 </li>
 <li>
-<a href="/category/tribal" title="Tribal Tattoos Designs- Art, Arm band, Dragon, Lower Back, Butterfly, Sun, Heart, Wolf, Eagle, Lion">Tribal</a>
+<a href="http://www.checkoutmyink.com/category/tribal" title="Tribal Tattoos Designs- Art, Arm band, Dragon, Lower Back, Butterfly, Sun, Heart, Wolf, Eagle, Lion">Tribal</a>
 </li>
 <!-- end: category list-->
 </ul>
@@ -104,9 +110,19 @@ new Ajax.Updater('login_status', '/sessions/status?back_to=%2Fprivacy', {asynchr
 
 
 
-
-
-
+  <div id="notice" class="message notice" style="display:none"></div>
+  <div id="error" class="message error" style="display:none"></div>
+  <script type="text/javascript">
+    Flash.transferFromCookies();
+    Flash.writeDataTo('error', $('error'));
+    Flash.writeDataTo('notice', $('notice'));
+    if (Flash.data['notice']) {
+      $('notice').show();
+    }
+    if (Flash.data['error']) {
+      $('error').show();
+    }
+  </script>
 
 
 
@@ -201,6 +217,17 @@ address. We will promptly correct any information found to be incorrect.</p>
 
 </div>
 
+<div class="clearer"></div>
+
+
+<div id="social-network">
+  <p>Join us at
+    <a href="http://www.checkoutmyink.com/goto/myspace" class="myspace" target="_blank" title="myspace">myspace</a>
+    <a href="http://www.checkoutmyink.com/goto/facebook" class="facebook" target="_blank" title="facebook">facebook</a>
+    <a href="http://www.checkoutmyink.com/goto/twitter" class="twitter" target="_blank" title="twitter">twitter</a>
+  
+    </p>
+</div>
 
 <!-- begin footer -->
 <div id="bottom">
@@ -234,28 +261,16 @@ Search the Web
 
 
 <p>
-<a href="/">Home</a>
-| <a href="/term">Term of Service</a>
-| <a href="/privacy">Privacy Policy</a>
-| <a href="/contact-us">Contact Us</a>
-| <a href="/advertise-with-us">Advertise With Us</a>
-| <a href="/about">About Us</a>
+<a href="http://www.checkoutmyink.com/">Home</a>
+| <a href="http://www.checkoutmyink.com/term">Term of Service</a>
+| <a href="http://www.checkoutmyink.com/privacy">Privacy Policy</a>
+| <a href="http://www.checkoutmyink.com/contact-us">Contact Us</a>
+| <a href="http://www.checkoutmyink.com/advertise-with-us">Advertise With Us</a>
+| <a href="http://www.checkoutmyink.com/about">About Us</a>
+| <a href="http://www.checkoutmyink.com/forums">Forums</a>
+| <a href="http://www.checkoutmyink.com/stats">INK Stats</a> <sup>new</sup>
 </p>
-<p>
-<span>
-
-
-<a href="/tag/back">Back Tattoo</a> · <a href="/tag/biomechanical">Biomechanical Tattoo</a> · <a href="/tag/asian-chinese">Chinese Tattoo</a> · <a href="/tag/cross">Cross Tattoo</a> · <a href="/tag/sexy">Sexy Tattoo</a> · <a href="/tag/star">Star Tattoo</a> · <a href="/tag/design">Tattoo Design</a> · <a href="/tag/flash">Tattoo Flash</a> · <a href="/tag/symbols">Tattoo Symbol</a> · <a href="/tag/tribal">Tribal Tattoo</a>
-
-</span>
-</p>
-<p>Copyright <a href="/">checkoutmyink.com</a> 2006-2009  |
-   <span id="social-network">
-	  Join us at <a href="http://www.myspace.com/checkoutmyink" class="myspace" target="_blank" title="myspace">myspace</a>
-                 <a href="http://www.facebook.com/pages/CheckoutmyInkcom/24515343050" class="facebook" target="_blank" title="facebook">facebook</a>
-			     <a href="http://twitter.com/checkoutmyink" class="twitter" target="_blank" title="twitter">twitter</a>
-   </span>
-</p>
+<p>Copyright <a href="http://www.checkoutmyink.com/">checkoutmyink.com</a> 2006-2009. The Best Way to Store &amp; Share Your Tattoos. Free to Join!</p>
 </div>
 </div>
 
@@ -269,7 +284,6 @@ var pageTracker = _gat._getTracker("UA-3661557-1");
 pageTracker._initData();
 pageTracker._trackPageview();
 </script>
-
 
 
 
