--- a/u/ua/ual/ualberta.ca.html
+++ b/u/ua/ual/ualberta.ca.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ualberta.ca privacy policy that was archived on 2009-06-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090619092836id_/http%3A//www.uofaweb.ualberta.ca/ualberta_about/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ualberta.ca privacy policy that was archived on 2009-11-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091104120219id_/http%3A//www.uofaweb.ualberta.ca/ualberta_about/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 
@@ -278,7 +278,7 @@ column: 2
 			altText = altText.substring(0, altText.length - 4);
 			
 			document.write("<img src=\"img/3rdColumnRotation/" + currentImage + "\" alt=\"" + altText + "\" />");
-		</script><img src="img/3rdColumnRotation/Telus_Centre.jpg" alt="Telus Centre">
+		</script><img src="img/3rdColumnRotation/Dentistry_Pharmacy_building_steeple.jpg" alt="Dentistry Pharmacy building steeple">
         
 <div class="helpfulLinks">
 <h2>Quick Links</h2>
