--- a/u/ub/ubi/ubint.net.html
+++ b/u/ub/ubi/ubint.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ubint.net privacy policy that was archived on 2010-06-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100612013748id_/http%3A//www.ubint.net/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ubint.net privacy policy that was archived on 2010-07-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100723140547id_/http%3A//www.ubint.net/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 
@@ -8,8 +8,8 @@
 <meta name="description" content="">
 <meta name="keywords" content="free proxy, proxy, anonymous, privacy, security, web, anonymizer, unblock space, unblock facebook, unblock youtube, school proxy">
 <link href="themes/glype-rs14/style.css" rel="stylesheet" type="text/css">
-   <script type="text/javascript">ginf={url:'http://ubint.net',script:'browse.php',target:{h:'',p:'',b:''},enc:{u:'',e:'1',p:'1'},b:'5'}</script>
-   <script type="text/javascript" src="http://ubint.net/includes/main.js"></script><script type="text/javascript">
+   <script type="text/javascript">ginf={url:'http://www.ubint.net',script:'browse.php',target:{h:'',p:'',b:''},enc:{u:'',e:'1',p:'1'},b:'5'}</script>
+   <script type="text/javascript" src="http://www.ubint.net/includes/main.js"></script><script type="text/javascript">
 window.addDomReadyFunc(function() {
    document.getElementById('options').style.display = 'none';
    document.getElementById('input').focus();
