--- a/w/we/we./we.org.html
+++ b/w/we/we./we.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the we.org privacy policy that was archived on 2010-05-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100507135914id_/http%3A//www.we.org/privacyPolicy.php%3FINC%3DYes) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the we.org privacy policy that was archived on 2010-07-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100723162251id_/http%3A//we.org/privacyPolicy.php%3FINC%3DYes) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 		<title>We.org Privacy Policy</title>
