--- a/t/th/the/the-house.com.html
+++ b/t/th/the/the-house.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the the-house.com privacy policy that was archived on 2010-05-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100522222514id_/http%3A//helpdesk.the-house.com/index.php%3Fpage%3Dour_privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the the-house.com privacy policy that was archived on 2010-07-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100723192337id_/http%3A//helpdesk.the-house.com/index.php%3Fpage%3Dour_privacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>The House Helpdesk - Our Privacy Policy</title>
@@ -11,6 +11,24 @@
 <link rel="stylesheet" type="text/css" href="http://helpdesk.the-house.com/leftnavbar-mountain.css">
 <link rel="stylesheet" href="http://helpdesk.the-house.com/xinfo.css" type="text/css">
 <link rel="shortcut icon" href="favicon.ico">
+<link type="text/css" media="screen" rel="stylesheet" href="http://images.the-house.com/colorbox.css">
+<link type="text/css" media="screen" rel="stylesheet" href="http://images.the-house.com/colorbox-custom.css">
+<!--[if IE]>
+	<link type="text/css" media="screen" rel="stylesheet" href="http://images.the-house.com/colorbox-custom-ie.css" />
+<![endif]-->
+<script type="text/javascript" src="http://images.the-house.com/jquery-1.3.2.js"></script>
+<script type="text/javascript" src="http://images.the-house.com/jquery.colorbox.js"></script>
+
+<script type="text/javascript">
+	$(document).ready(function(){
+		$.fn.colorbox.settings.transition = "fade";
+		$.fn.colorbox.settings.bgOpacity = "0.8";
+		$.fn.colorbox.settings.contentCurrent = "({current}/{total})";
+		$(".cpModal").colorbox();
+		$("#google").colorbox({contentWidth:"520px", contentHeight:"450px", contentIframe:true});
+	});
+</script>
+
 <script type="TEXT/JAVASCRIPT" language="javascript" src="http://www.the-house.com/images/navbar.js"></script>
 <script type="TEXT/JAVASCRIPT" language="javascript" src="http://www.the-house.com/images/thehouse.js"></script>
 
@@ -34,7 +52,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <body onload="preloadImages();">
 <div id="container">
 
-<div id="navbar"><div id="navbortop"><img src="http://images.the-house.com/navbar8.jpg" alt="The House Snowboard Shop" width="910" height="97" border="0" usemap="#Navbar"></div>
+<div id="navbar"><div id="navbortop"><img border="0" width="910" height="97" src="http://images.the-house.com/navbar17.jpg" alt="The House Snowboard Shop" usemap="#Navbar"></div>
 <map name="Navbar" id="Navbar">
 <area shape="rect" coords="2,79,58,93" href="http://www.the-house.com/snbd.html" alt="Snowboards">
 <area shape="rect" coords="62,78,107,95" href="http://www.the-house.com/snbo.html" alt="Snowboard Boots">
@@ -54,16 +72,16 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <area shape="rect" coords="565,3,631,19" href="http://helpdesk.the-house.com">
 <area shape="rect" coords="633,3,700,20" href="http://www.the-house.com/cgi-bin/cart">
 <area shape="rect" coords="702,3,785,19" href="javascript:popup('http://www.the-house.com/images/track-form.html','600','610');">
-<area shape="poly" coords="815,2,877,2,907,29,907,80" href="http://www.the-house.com/team/" target="_blank">
+<area shape="rect" coords="644,25,713,49" href="http://www.the-house.com/outlet.html" alt="Outlet">
 <area shape="poly" coords="432,55,442,72,557,72,546,55" href="http://www.the-house.com/street.html" alt="Streetwear">
 <area shape="poly" coords="309,56,320,71,437,71,429,54" href="http://www.the-house.com/backtoschool.html" alt="Back in School">
 <area shape="poly" coords="371,76,378,94,420,94,412,76" href="http://www.the-house.com/skiing.html" alt="Alpine Skis">
-<area shape="rect" coords="350,11,548,44" href="http://www.the-house.com/outlet.html">
 <area shape="rect" coords="560,54,671,72" href="http://www.the-house.com/sun.html" alt="Sunglasses">
 <area shape="rect" coords="677,55,777,71" href="http://www.the-house.com/waterskiing.html" alt="Waterskis">
 <area shape="rect" coords="781,53,882,73" href="http://www.the-house.com/paddleboarding.html" alt="Paddleboard">
-</map>
-<div id="navbarbottom"><img src="http://images.the-house.com/spacer.gif" alt="spacer" width="405" height="10"></div></div>
+<area shape="poly" coords="384,43,524,43,521,11,386,11" href="http://www.the-house.com/biking.html" alt="BMX Bikes">
+<area shape="poly" coords="815,2,877,2,907,29,907,80" href="http://www.the-house.com/team/" target="_blank"> </map>
+<div id="navbarbottom"><img width="405" height="10" src="http://images.the-house.com/spacer.gif" alt="spacer"><br><br></div></div>
 <div class="content">
 
 <div class="leftnavbar">
@@ -130,6 +148,8 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <div class="leftnavbar-storetitle">
 <b class="store">Generic Help Desk</b></div>
 
+
+<li class="category"><a href="http://helpdesk.the-house.com/index.php?page=order_authorization_forms">Order Authorization Forms</a></li>
 
 <li class="category"><a href="http://helpdesk.the-house.com/index.php?page=testimonials">Sites we like</a>
 </li>
@@ -226,7 +246,7 @@ Orders: 800-409-7669<br>   Info: 651-482-9995<br>   Service: 866-243-6932<br>   
 October-February<br>   8AM - 8PM (M-F)<br>    9AM - 5PM (Sat.)<br>12PM - 4PM (Sun)<br>    <br>March-September<br>   8AM - 7PM (M-TH)<br>8AM - 6PM (F)<br>   9AM - 5PM (Sat)<br>12PM-4PM (Sun)<br>   <br></div>
 <div class="xboxsep">
 <h3>Showroom Hours</h3>
-October-February<br>   10AM - 7PM (M-F)<br>   9AM - 5PM (Sat)<br>12PM-4PM (Sun)<br>    <br>March-September <br>    10AM -6PM (M-F)<br>   9AM - 4PM (Sat)<br>Closed (Sun)<br><br>   <br></div>
+October-February<br>   10AM - 7PM (M-F)<br>   9AM - 5PM (Sat)<br>12PM-4PM (Sun)<br>    <br>March-September <br>    10AM -7PM (M-F)<br>   9AM - 5PM (Sat)<br>12PM - 4PM (Sun)<br><br>   <br></div>
 <span class="xsmall">All times based on Central Time Zone (daytime adjusted)</span> </div>
 </div>
 
@@ -612,67 +632,15 @@ October-February<br>   10AM - 7PM (M-F)<br>   9AM - 5PM (Sat)<br>12PM-4PM (Sun)<
 </form>
 </div></div>
 <div id="rightads">
+
 <div id="rightads-thehouse"><a href="javascript:popup('http://helpdesk.the-house.com/worldlargest.html','580','543');"><img src="http://images.the-house.com/rightads-worldlargest-new.gif" width="175" height="175" border="0" alt="World Largest Snowboard &amp; Wakeboard Gear Shop"></a></div>
-<div id="rightads-pricematch"><a href="javascript:popup('http://www.activesportscentre.com/pricematchinfo.html','515','620');"><img src="http://images.the-house.com/rightbar_lowprice.gif" border="0"></a></div>
-<div id="rightads-customer"><br><img src="http://images.the-house.com/rightads-customercomments-new.gif" width="175" height="110" border="0" usemap="#comments">
-<map name="comments" id="comments"><area shape="rect" coords="5,47,171,107" href="http://helpdesk.the-house.com/index.php?page=customers_comments">
-<area shape="rect" coords="3,2,168,44" href="http://helpdesk.the-house.com/index.php?page=100_satisfaction_guaranteed">
-</map></div>
-<!-- BEGIN: Constant Contact Bubble Opt-in Email List Form -->
-<div style="padding:5px;background-color:#fff;border:solid 2px #CFCFCF">
-<table width="170" border="0" cellspacing="0" cellpadding="0">
+<div id="rightads-bikes"><a class="cpModal" href="http://images.the-house.com/housepopup_bikes.jpg"><img src="http://images.the-house.com/rightads_bikegiveaway.jpg" width="175" height="444" border="0" alt="$170 FREE gear with each bike purchase"></a></div>
+<div id="rightads-snowboards"><a class="cpModal" href="http://images.the-house.com/housepopup_snowboards.jpg"><img src="http://images.the-house.com/rightads_snowboardgiveaway.jpg" width="175" height="489" border="0" alt="up to $205 FREE stuff with snowboard gear purchase"></a></div>
+<div id="rightads-skis"><a class="cpModal" href="http://images.the-house.com/housepopup_freeskigoggles.jpg"><img src="http://images.the-house.com/rightads_skigiveaway.jpg" width="175" height="480" border="0" alt="up to $225 FREE stuff with ski gear purchase"></a></div>
+<div id="rightads-wakeboards"><a class="cpModal" href="http://images.the-house.com/housepopup_wakeboards.jpg"><img src="http://images.the-house.com/rightads_wakeboardgiveawaySM.jpg" width="175" height="178" border="0" alt="up to $350 FREE gear with wakeboard purchase"></a></div>
+<div id="rightads-shoes"><a class="cpModal" href="http://images.the-house.com/housepopup_freedvdsocks.jpg"><img src="http://images.the-house.com/rightads_shoegiveawaySM.jpg" width="175" height="180" border="0" alt="up to $50 FREE stuff with each shoe purchase"></a></div>
+<div id="rightads-skateboards"><a class="cpModal" href="http://images.the-house.com/housepopup_freewallet.jpg"><img src="http://images.the-house.com/rightads_skateboardgiveawaySM.jpg" width="175" height="198" border="0" alt="up to $62 FREE stuff with each skateboard purchase"></a></div>
 
-<tbody><tr>
-<td width="152" height="8" bgcolor="#ffffff"><img src="http://img.constantcontact.com/ui/images/spacer.gif" border="0" width="1" height="1"></td>
-</tr>
-<tr>
-<td width="170" colspan="3" border-right:="" 1px="" solid="" #006699;"=""><div>
-<form name="ccoptin" action="http://visitor.constantcontact.com/d.jsp" target="_blank" method="post" style="margin-bottom:3;">
-<font style="font-weight: bold; font-family:Arial; font-size:14px; color:#9D1500;">JOIN OUR EMAIL LIST</font><br>
-<font style="font-weight: normal; font-family:Arial; font-size:10px; color:#000000;">Email:</font> <input type="text" name="ea" size="14" value="" style="font-family: Arial; font-size:10px; border:1px solid #999999;">&nbsp;<input type="submit" name="go" value="Join" class="submit" style="font-family:Arial,Helvetica,sans-serif; font-size:11px;">
-<input type="hidden" name="m" value="1102600045118">
-<input type="hidden" name="p" value="oi">
-</form>
-</div></td>
-</tr>
-
-
-</tbody></table>
-<!-- END: Constant Contact Bubble Opt-in Email List Form -->
-<!-- BEGIN: SafeSubscribe -->
-
-<div style="padding-top:5px;">
-<a href="http://www.constantcontact.com/safesubscribe.jsp" target="_blank"><img src="http://img.constantcontact.com/ui/images1/safe_subscribe_logo.gif" border="0" width="168" height="14" alt=""></a></div>
-
-<!-- END: SafeSubscribe -->
-
-<!-- BEGIN: Email Marketing you can trust -->
-<div style="font-family:Arial,Helvetica,sans-serif;font-size:10px;color:#999999;">
-For Email Newsletters you can trust
-</div></div>
-<!-- END: Email Newsletters you can trust -->
-<div id="rightads-customer"><br><br><img id="Image-Maps_9200911111100428" src="http://info.the-house.com/followus.gif" usemap="#Image-Maps_9200911111100428" border="0" width="175" height="95" alt="">
-
-<map id="_Image-Maps_9200911111100428" name="Image-Maps_9200911111100428">
-<area shape="rect" coords="4,3,167,44" href="http://blog.the-house.com/" alt="HouseJunkies" target="_blank" title="HouseJunkies">
-<area shape="rect" coords="2,57,34,90" href="http://twitter.com/houseboardshop" alt="" title="Twitter">
-<area shape="rect" coords="36,57,68,90" href="http://www.facebook.com/pages/Little-Canada-MN/The-House-Boardshop/65376616815?v=wall&amp;viewas=0" target="_blank" alt="" title="Facebook">
-<area shape="rect" coords="69,57,101,90" href="http://www.youtube.com/thehouseboardshop" target="_blank" alt="" title="YouTube">
-<area shape="rect" coords="104,57,136,90" href="http://www.flickr.com/photos/thehouseboardshop/" target="_blank" alt="" title="Flickr">
-<area shape="rect" coords="138,57,170,90" href="http://www.myspace.com/houseboardshop" target="_blank" alt="" title="MySpace">
-</map></div>
-<div id="rightads-newgear"><a href="http://helpdesk.the-house.com/index.php?page=our_affiliate_program"><img src="http://images.the-house.com/rightbar-houseaffiliate.gif" border="0"></a></div>
-<div id="rightads-brands">
-<img src="http://images.the-house.com/rightads-brands-new1.gif" width="175" height="589" border="0" usemap="#mapnewarrivals">
-<map name="mapnewarrivals" id="mapnewarrivals">
-<area shape="rect" coords="14,88,161,115" href="http://www.the-house.com/vendor-burtonstore.html" alt="Burton Snowboards">
-<area shape="rect" coords="16,215,162,234" href="http://www.the-house.com/vendor-oakleystore.html" alt="Oakley">
-<area shape="rect" coords="49,116,115,176" href="http://www.the-house.com/vendor-volcomshop.html" alt="Volcom">
-<area shape="rect" coords="55,463,125,503" href="http://www.the-house.com/vendor-32store.html" alt="32 Boots"><area shape="rect" coords="16,428,163,459" href="http://www.the-house.com/vendor-k2shop.html" alt="K2 Snowboards"><area shape="rect" coords="23,373,159,419" href="http://www.the-house.com/vendor-forumshop.html" alt="Forum"><area shape="rect" coords="39,317,128,372" href="http://www.the-house.com/vendor-gnustore.html" alt="GNU Snowboards"><area shape="rect" coords="18,277,151,317" href="http://www.the-house.com/vendor-analogstore.html" alt="Analog"><area shape="rect" coords="22,243,151,270" href="http://www.the-house.com/vendor-rideshop.html" alt="Ride Snowboards"><area shape="rect" coords="18,179,154,206" href="http://www.the-house.com/vendor-libtechstore.html" alt="Libtech">
-<area shape="rect" coords="19,506,153,540" href="http://www.the-house.com/vendor-romestore.html">
-
-</map>
-</div>
 </div>
 
 	<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
@@ -685,6 +653,6 @@ urchinTracker();
 
 
 
-<!-- Generated in 0.252044 seconds by CMS Made Simple using 14 SQL queries -->
+<!-- Generated in 0.263207 seconds by CMS Made Simple using 14 SQL queries -->
 <!-- CMS Made Simple - Released under the GPL - http://cmsmadesimple.org -->
 </div></body></html>
