--- a/f/fe/fet/fetchapp.com.html
+++ b/f/fe/fet/fetchapp.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the fetchapp.com privacy policy that was archived on 2009-06-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090625184527id_/http%3A//fetchapp.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fetchapp.com privacy policy that was archived on 2010-07-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100724014736id_/http%3A//www.fetchapp.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<title>Fetch</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="copyright" content="Pixallent, Ltd.">
+	<meta name="copyright" content="Pixellent, LLC">
 	    <link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
-    <link href="/stylesheets/cache/global.css?1245673707" media="screen" rel="stylesheet" type="text/css"><script src="/javascripts/cache/global.js?1245673712" type="text/javascript"></script>
+    <link href="/stylesheets/cache/global.css?1279905074" media="screen" rel="stylesheet" type="text/css"><script src="/javascripts/cache/global.js?1279905081" type="text/javascript"></script>
 </head>
 
 <body id="top_of_page">
@@ -16,13 +16,13 @@
 		<p>We collect the e-mail addresses of those who communicate with us via e-mail, aggregate information on what pages consumers access or visit, and information volunteered by the consumer (such as survey information and/or site registrations). The information we collect is used to improve the content of our web pages and the quality of our service, and is not shared with or sold to other organizations for commercial purposes, except to provide products or services you've requested, when we have your permission, or under the following circumstances:</p>
 		<ul>
 			<li>It is necessary to share information in order to investigate, prevent, or take action regarding illegal activities, suspected fraud, situations involving potential threats to the physical safety of any person, violations of <a href="/terms">Terms of Service</a>, or as otherwise required by law.</li>
-			<li>We transfer information about you if Pixallent or Fetch is acquired by or merged with another company. In this event, Pixallent will notify you before information about you is transferred and becomes subject to a different privacy policy.</li>
+			<li>We transfer information about you if Pixellent or Fetch is acquired by or merged with another company. In this event, Pixellent will notify you before information about you is transferred and becomes subject to a different privacy policy.</li>
 		</ul>
 		
 		<h3>Information Gathering and Usage</h3>
 		<ul>
 			<li>When you register for Fetch we ask for information such as your name, company name, email address, billing address, credit card information. Members who sign up for the free account are not required to enter a credit card.</li>
-			<li>Pixallent uses collected information for the following general purposes: products and services provision, billing, identification and authentication, services improvement, contact, and research.</li>
+			<li>Pixellent uses collected information for the following general purposes: products and services provision, billing, identification and authentication, services improvement, contact, and research.</li>
 		</ul>
 		
 		<h3>Cookies</h3>
@@ -33,18 +33,18 @@
 		</ul>
 		
 		<h3>Data Storage</h3>
-		<p>Pixallent uses third party vendors and hosting partners to provide the necessary hardware, software, networking, storage, and related technology required to run Fetch. Although Pixallent owns the code, databases, and all rights to the Fetch application, you retain all rights to your data.</p>
+		<p>Pixellent uses third party vendors and hosting partners to provide the necessary hardware, software, networking, storage, and related technology required to run Fetch. Although Pixellent owns the code, databases, and all rights to the Fetch application, you retain all rights to your data.</p>
 		
 		<h3>Disclosure</h3>
 		<ul>
-			<li>Pixallent may disclose personally identifiable information under special circumstances, such as to comply with subpoenas or when your actions violate the <a href="/terms">Terms of Service</a>.</li>
+			<li>Pixellent may disclose personally identifiable information under special circumstances, such as to comply with subpoenas or when your actions violate the <a href="/terms">Terms of Service</a>.</li>
 		</ul>
 		
 		<h3>Changes</h3>
-		<p>Pixallent may periodically update this policy. We will notify you about significant changes in the way we treat personal information by sending a notice to the primary email address specified in your Fetch primary account holder account or by placing a prominent notice on our site.</p>
+		<p>Pixellent may periodically update this policy. We will notify you about significant changes in the way we treat personal information by sending a notice to the primary email address specified in your Fetch primary account holder account or by placing a prominent notice on our site.</p>
 		
 		<h3>Questions</h3>
-		<p>Any questions about this Privacy Policy should be addressed to help at pixallent dot com or by mail at: Pixallent,		835 E Lamar, Suite 423, Arlington Texas 76011 USA</p>
+		<p>Any questions about this Privacy Policy should be addressed to help at pixellent dot com or by mail at: Pixellent,		835 E Lamar, Suite 423, Arlington Texas 76011 USA</p>
 	</div>
 </div>
 	    
