nhpr.org (archived on 2010-07-24)
{
  "alexa_rank": 215387,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 6091,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.69,
  "homepage_snapshot_redirected_domain": "nhpr.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100929034818id_/http://www.nhpr.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100929034818id_/http%3A//nhpr.org",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "nhpr.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100724045125id_/http%3A//www.nhpr.org/node/10184",
  "policy_title": "NHPR's Privacy Policy | New Hampshire Public Radio",
  "policy_url": "nhpr.org/node/10184",
  "sha1": "25a68cbbfc8ab6d5c7d40b1f9eb2d3817c390744",
  "simhash": 15983649017821374556,
  "simhash_updated": false,
  "site_hostname": "nhpr.org",
  "site_url": "http://nhpr.org",
  "smog": 13.19,
  "strict_updated": false,
  "timestamp": "20100724045125",
  "word_count": 1043,
  "year": 2010
}

--- a/n/nh/nhp/nhpr.org.html
+++ b/n/nh/nhp/nhpr.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nhpr.org privacy policy that was archived on 2010-06-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100619001111id_/http%3A//www.nhpr.org/node/10184) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nhpr.org privacy policy that was archived on 2010-07-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100724045125id_/http%3A//www.nhpr.org/node/10184) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="xx" xml:lang="xx" class="js"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -39,7 +39,7 @@
             <td id="nowplaying1" width="593"><div id="transparentbk4">
               <div id="transparentbk2">
                 <div id="transparentbk">Now Playing:
-                  <a href="http://www.nhpr.org/node/21414">The Exchange</a><br>                  Listen Live: <a href="http://nhpr-sc.streamguys.us/listen.pls">MP3</a> | <a href="http://www.nhpr.org/nhprLIVE.asx">Windows Media</a><br>
+                  <a href="http://www.nhpr.org/node/21419">BBC World Service</a><br>                  Listen Live: <a href="http://nhpr-sc.streamguys.us/listen.pls">MP3</a> | <a href="http://www.nhpr.org/nhprLIVE.asx">Windows Media</a><br>
                   Live stream supported by: <a href="http://www.subaruofkeene.com/" target="blank">Subaru of Keene</a> </div>
               </div>
             </div></td>
@@ -144,7 +144,7 @@ document.write(month + "/" + day + "/" + year)
             <td style="color:#FFFFFF;font-size:10px;vertical-align:middle;">Quick Links: </td>
             <td><form action="/node/10184" accept-charset="UTF-8" method="post" id="jump-quickly-form-1" class="jump-quickly">
 <div><div class="container-inline"><div class="form-item" id="edit-jump-goto-wrapper">
- <select name="jump_goto" class="form-select" id="edit-jump-goto"><option value="http://www.nhpr.org/carraffle">Car Raffle</option><option value="http://www.nhpr.org/workingitout">Working It Out</option><option value="http://www.nhpr.org/volunteer/pledge">Volunteer</option><option value="http://www.nhpr.org/special/socratesexchange">Socrates Exchange</option></select>
+ <select name="jump_goto" class="form-select" id="edit-jump-goto"><option value="http://www.nhpr.org/carraffle">Car Raffle</option><option value="http://www.nhpr.org/workingitout">Working It Out</option><option value="http://www.nhpr.org/volunteer/pledge">Volunteer</option><option value="http://www.nhpr.org/node/9518">Monadnock Lyceum</option></select>
 </div>
 <input type="submit" name="op" id="edit-submit" value="Go" class="form-submit">
 </div><input type="hidden" name="form_id" id="edit-jump-quickly-form-1" value="jump_quickly_form_1">
