--- a/a/as/asb/asbhawaii.com.html
+++ b/a/as/asb/asbhawaii.com.html
@@ -1,27 +1,27 @@
-<!--The following is the downloaded HTML source of the asbhawaii.com privacy policy that was archived on 2010-06-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100615172147id_/http%3A//www.asbhawaii.com/global/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the asbhawaii.com privacy policy that was archived on 2010-07-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100724063141id_/http%3A//www.asbhawaii.com/global/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en" dir="ltr"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="shortcut icon" href="/misc/favicon.ico" type="image/x-icon">
   <title>Privacy Policy | American Savings Bank</title>
-  <link type="text/css" rel="stylesheet" media="all" href="/modules/lightbox2/css/lightbox.css?s">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/node/node.css?s">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/system/defaults.css?s">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system.css?s">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system-menus.css?s">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/user/user.css?s">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/cck/theme/content-module.css?s">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/fckeditor2/fckeditor.css?s">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/filefield/filefield.css?s">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/cck/modules/fieldgroup/fieldgroup.css?s">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/custom_search/custom_search.css?s">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/asb/style.css?s">
-  <script type="text/javascript" src="/misc/jquery.js?s"></script>
-<script type="text/javascript" src="/misc/drupal.js?s"></script>
-<script type="text/javascript" src="/modules/lightbox2/js/lightbox.js?s"></script>
-<script type="text/javascript" src="/sites/all/modules/custom_search/custom_search.js?s"></script>
+  <link type="text/css" rel="stylesheet" media="all" href="/modules/lightbox2/css/lightbox.css?0">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/node/node.css?0">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/defaults.css?0">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system.css?0">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system-menus.css?0">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/user/user.css?0">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/cck/theme/content-module.css?0">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/fckeditor2/fckeditor.css?0">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/filefield/filefield.css?0">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/cck/modules/fieldgroup/fieldgroup.css?0">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/custom_search/custom_search.css?0">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/asb/style.css?0">
+  <script type="text/javascript" src="/misc/jquery.js?0"></script>
+<script type="text/javascript" src="/misc/drupal.js?0"></script>
+<script type="text/javascript" src="/modules/lightbox2/js/lightbox.js?0"></script>
+<script type="text/javascript" src="/sites/all/modules/custom_search/custom_search.js?0"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, { "basePath": "/", "lightbox2": { "rtl": 0, "file_path": "/(\\w\\w/)sites/default/files", "default_image": "/modules/lightbox2/images/brokenimage.jpg", "border_size": "10", "font_color": "000", "box_color": "fff", "top_position": "", "overlay_opacity": "0.8", "overlay_color": "369", "disable_close_click": 1, "resize_sequence": "0", "resize_speed": 400, "fade_in_speed": 400, "slide_down_speed": 600, "use_alt_layout": 0, "disable_resize": 0, "disable_zoom": 0, "force_show_nav": 0, "loop_items": 0, "node_link_text": "View Image Details", "node_link_target": 0, "image_count": "Image !current of !total", "video_count": "Video !current of !total", "page_count": "Page !current of !total", "lite_press_x_close": "press \x3ca href=\"#\" onclick=\"hideLightbox(); return FALSE;\"\x3e\x3ckbd\x3ex\x3c/kbd\x3e\x3c/a\x3e to close", "download_link_text": "", "enable_login": false, "enable_contact": false, "keys_close": "c x 27", "keys_previous": "p 37", "keys_next": "n 39", "keys_zoom": "z", "keys_play_pause": "32", "display_image_size": "", "image_node_sizes": "()", "trigger_lightbox_classes": "", "trigger_lightbox_group_classes": "", "trigger_slideshow_classes": "", "trigger_lightframe_classes": "", "trigger_lightframe_group_classes": "", "custom_class_handler": 0, "custom_trigger_classes": "", "disable_for_gallery_lists": true, "disable_for_acidfree_gallery_lists": true, "enable_acidfree_videos": true, "slideshow_interval": 5000, "slideshow_automatic_start": true, "slideshow_automatic_exit": true, "show_play_pause": true, "pause_on_next_click": false, "pause_on_previous_click": true, "loop_slides": false, "iframe_width": 600, "iframe_height": 400, "iframe_border": 1, "enable_video": 0 }, "custom_search": { "default_value": "Search site..." } });
@@ -74,7 +74,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "lightbox2": { "rtl": 0, "file
  <input type="text" maxlength="128" name="search_block_form" id="edit-search-block-form-1" size="15" value="Search site..." title="Enter the terms you wish to search for." class="form-text  custom-search-default-value">
 </div>
 <input type="image" name="op" value="Search" id="edit-submit" class="form-submit" src="/sites/default/files/custom_search/btn_search.gif">
-<input type="hidden" name="form_build_id" id="form-a01704a75d19553ff461f47ec6ed7b70" value="form-a01704a75d19553ff461f47ec6ed7b70">
+<input type="hidden" name="form_build_id" id="form-d89aaa616c5c1ef20eb57107aa3e76bf" value="form-d89aaa616c5c1ef20eb57107aa3e76bf">
 <input type="hidden" name="form_id" id="edit-search-block-form" value="search_block_form">
 </div>
 
@@ -93,7 +93,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "lightbox2": { "rtl": 0, "file
 </ul>    </div></div>   
 
     <div id="sidebar-right">
-       <p align="center"><a href="/global/open-account"><img style="border: medium none ;" title="Open an Account - learn more" alt="Open an Account - learn more" src="/sites/default/files/image/banners/open-account.jpg"></a></p>
+       <p align="center"><a href="/global/open-account"><img style="border: medium none;" title="Open an Account - learn more" alt="Open an Account - learn more" src="/sites/default/files/image/banners/open-account.jpg"></a></p>
     </div>        
     <div id="page-content">
         <div class="breadcrumb"><a href="/">Home</a></div>        <h1 class="title">Privacy Policy</h1>
