breakthru.com (archived on 2010-07-24)
{
  "alexa_rank": 50070,
  "analysis_subcorpus": true,
  "categories": "informationtech",
  "char_count": 957,
  "classifier_probability": 0.83,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.94,
  "homepage_snapshot_redirected_domain": "breakthru.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100925163951id_/http://www.breakthru.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100925163951id_/http%3A//breakthru.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "breakthru.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100724173540id_/http%3A//www.breakthru.com/go/page/privacy.html%3F",
  "policy_title": "BreakThru.com PRIVACY POLICY",
  "policy_url": "breakthru.com/go/page/privacy.html?",
  "sha1": "483c77f7c12e53ef21d49fb4f0638bbc87496721",
  "simhash": 17694113179165273751,
  "simhash_updated": false,
  "site_hostname": "breakthru.com",
  "site_url": "http://breakthru.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20100724173540",
  "word_count": 155,
  "year": 2010
}

--- a/b/br/bre/breakthru.com.html
+++ b/b/br/bre/breakthru.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the breakthru.com privacy policy that was archived on 2009-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091219220850id_/http%3A//www.breakthru.com/go/page/privacy.html%3Fsite%3Dbreak) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the breakthru.com privacy policy that was archived on 2010-07-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100724173540id_/http%3A//www.breakthru.com/go/page/privacy.html%3F) for the most accurate reproduction.-->
 
 <html><head>
 <link rel="stylesheet" type="text/css" href="http://graphics.breakthru.com/images/break/css/header.css">
@@ -21,7 +21,7 @@ if (parent.frames.length > 0) {
 </script></head>
 
 <!-- X.X.4.232 -->
-<!-- v./code/20091124 -->
+<!-- v./code/20100629 -->
 
 
 
@@ -46,15 +46,15 @@ if (parent.frames.length > 0) {
         <tr><td colspan="2" bgcolor="#C4D9EF">
 	<table width="800" cellpadding="1" cellspacing="1" border="0">
 	<tbody><tr><td align="center" nowrap="">
-	<a href="http://www.breakthru.com/p/page.cgi?site=break" class="nav">Home</a>
+	<a href="http://www.breakthru.com/p/page.cgi?" class="nav">Home</a>
         </td><td align="center" nowrap="">
-	<a href="http://www.breakthru.com/p/register.cgi?site=break" class="nav">Register</a>
+	<a href="http://www.breakthru.com/p/register.cgi?" class="nav">Register</a>
 	</td><td align="center" nowrap="">
-	<a href="http://www.breakthru.com/go/page/about.html?site=break" class="nav">About</a>
+	<a href="http://www.breakthru.com/go/page/about.html?" class="nav">About</a>
 	</td><td align="center" nowrap="">
-	<a href="http://breakthru.com/p/partners/main.cgi?site=break" class="nav">Affiliates</a>
+	<a href="http://www.breakthru.com/p/partners/main.cgi?" class="nav">Affiliates</a>
         </td><td align="center" nowrap="">
- 	<a href="http://breakthru.com/p/help.cgi?site=break" class="nav">Help</a>
+ 	<a href="http://www.breakthru.com/p/help.cgi?" class="nav">Help</a>
 	</td></tr></tbody></table>
     </td></tr>
 </tbody></table>
@@ -100,7 +100,7 @@ if (parent.frames.length > 0) {
                                 <tr><td align="center" valign="top" colspan="2">
                 <form method="post" action="http://www.breakthru.com/p/register.cgi">
 <div></div>
-<input type="hidden" name="site" value="break">
+
                 <input type="submit" value="Register" class="mc_guest_button">
                 </form>
                                 </td></tr></tbody></table>
@@ -123,7 +123,7 @@ if (parent.frames.length > 0) {
                 <tbody><tr>
                 <form method="post" action="http://www.breakthru.com/p/main.cgi" name="LOGIN"></form>
 
-<input type="hidden" name="site" value="break">
+
                 <input type="hidden" name="action" value="login">
                 <td colspan="2">
                 &nbsp;<b class="login">Member Login</b>
@@ -139,7 +139,7 @@ if (parent.frames.length > 0) {
                 <input type="password" name="password">
                 </td></tr>
                 <tr><td align="right">
-                <a href="http://www.breakthru.com/go/page/forgot_login.html?site=break" class="small">Forgot Login</a>&nbsp;&nbsp;<input type="submit" value="Login" class="mc_guest_button">&nbsp;&nbsp;
+                <a href="http://www.breakthru.com/go/page/forgot_login.html?" class="small">Forgot Login</a>&nbsp;&nbsp;<input type="submit" value="Login" class="mc_guest_button">&nbsp;&nbsp;
                 </td></tr>
                 <tr><td align="center" colspan="2">
                 <br>
@@ -383,8 +383,8 @@ work hard to ensure your secure use of our services.
 </li></ul>
 <p>
 Click 
-<a href="http://www.breakthru.com/p/register.cgi?site=break&amp;from=privacy">here</a> 
-to join our <a href="http://www.breakthru.com/p/register.cgi?site=break&amp;from=privacy">free,</a> 
+<a href="http://www.breakthru.com/p/register.cgi?from=privacy">here</a> 
+to join our <a href="http://www.breakthru.com/p/register.cgi?from=privacy">free,</a> 
 safe, and exciting community now.
 	  </p></td>
         </tr>   
@@ -423,12 +423,12 @@ Sunnyvale, CA 94089 <br>
 <table width="830" cellpadding="5" cellspacing="0" border="0" align="left" background="#447ED45">
 
 <tbody><tr><td align="center" class="small">
-   <a href="http://www.breakthru.com/go/page/about.html?site=break" target="_top">About</a>&nbsp;|
+   <a href="http://www.breakthru.com/go/page/about.html?" target="_top">About</a>&nbsp;|
    &nbsp;<a href="http://www.friendfinderinc.com" target="_blank">Corporate</a>&nbsp;|
-   &nbsp;<a href="http://www.breakthru.com/go/page/privacy.html?site=break" target="_top">Privacy Policy</a>&nbsp;|
-   &nbsp;<a href="http://www.breakthru.com/go/page/terms_of_use.html?site=break" target="_top">Terms of Use</a>&nbsp;
+   &nbsp;<a href="http://www.breakthru.com/go/page/privacy.html?" target="_top">Privacy Policy</a>&nbsp;|
+   &nbsp;<a href="http://www.breakthru.com/go/page/terms_of_use.html?" target="_top">Terms of Use</a>&nbsp;
   <br>
-© 2003-2009 GlobalAlphabet, Inc. 
+© 2003-2010 GlobalAlphabet, Inc. 
 
 <br>
 </td></tr></tbody></table>
@@ -441,13 +441,13 @@ Sunnyvale, CA 94089 <br>
 
 
 
-<script type="text/javascript">var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script><script type="text/javascript">function embedGoogleAnalytics() {var pageTracker = _gat._getTracker("UA-5601390-2");pageTracker._setDomainName("breakthru.com");pageTracker._initData();pageTracker._trackPageview();}if (typeof(SWFObject) != 'undefined' && typeof(SWFObject) != null) { addDOMLoadEvent(embedGoogleAnalytics); } else { embedGoogleAnalytics() }</script><script language="javascript" type="text/javascript"><!--
+<script type="text/javascript">var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script><script type="text/javascript">function embedGoogleAnalytics() {var pageTracker = _gat._getTracker("UA-5601390-2");pageTracker._setSampleRate("1");pageTracker._setDomainName("breakthru.com");pageTracker._initData();pageTracker._trackPageview();}if (typeof(SWFObject) != 'undefined' && typeof(SWFObject) != null) { addDOMLoadEvent(embedGoogleAnalytics); } else { embedGoogleAnalytics() }</script><script language="javascript" type="text/javascript"><!--
 var send = (top != self && top.frames.length != 0) ? 0 : 1;var pageStartTime = new Date().getTime();var timedout = 0;
 function getRefererPageName(url){var page=url.replace(/^http:\/\//,"");page=page.replace(/\?.*/,"");page=page.replace(/&.*/,"");var host=page.replace(/\/.*/,"");if(host.match(/adultfriendfinder\.com/)){var regex=page.match(/(\/.*)/);page=RegExp.$1;}return escape(page);}
-function doStatistics(){if(send==1){var pageEndTime=new Date().getTime();var pageRenderTime=(timedout==1)?'5000+':pageEndTime-pageStartTime;var sessionId=escape("111111111111 1261260529 67.202.15.176 ");var pageName=escape(location.pathname);var referer="";var refererPageName=getRefererPageName(referer);var screenResolution=screen.width+"x"+screen.height;var glean=new Image();var ffProto=("https:"==document.location.protocol)?"https://":"http://";var rand=Math.round(10000*Math.random());glean.src=ffProto+"glean.pop6.com/images/common/glean.gif?rand="+rand+"&site=break&session="+sessionId+"&pwsid=&pagename="+pageName+"&pagestate=&referer="+refererPageName+"&country=United States&city="+"&lang=english&level="+"&gpid=&pid=f116&event="+"&pagerendertime="+pageRenderTime+"&testbed=0";send=0;}}
+function doStatistics(){if(send==1){var pageEndTime=new Date().getTime();var pageRenderTime=(timedout==1)?'5000+':pageEndTime-pageStartTime;var sessionId=escape("111111111111 1279992940 174.129.237.157 ");var pageName=escape(location.pathname);var referer="";var refererPageName=getRefererPageName(referer);var screenResolution=screen.width+"x"+screen.height;var glean=new Image();var ffProto=("https:"==document.location.protocol)?"https://":"http://";var rand=Math.round(10000*Math.random());glean.src=ffProto+"glean.pop6.com/images/common/glean.gif?rand="+rand+"&site=break&session="+sessionId+"&pwsid=&pagename="+pageName+"&pagestate=&referer="+refererPageName+"&country=United States&city="+"&lang=english&level="+"&gpid=&pid=f116&event="+"&pagerendertime="+pageRenderTime+"&testbed=0";send=0;}}
 function addEvent(obj,evType,fn){if(obj.addEventListener){obj.addEventListener(evType,fn,false);return true;}else if(obj.attachEvent){var r=obj.attachEvent("on"+evType,fn);return r;}else{return false;}}
 addEvent(window, 'load', doStatistics);
 if(send==1){window.setTimeout('timedout=1;doStatistics()',5000)}
 // --></script>
-<noscript><img src="https://glean.pop6.com/images/common/glean.gif?rand=9594&site=break&session=111111111111+1261260529+67.202.15.176+&pwsid=&pagename=%2Funknown&pagestate=&country=United+States&city=&lang=english&level=&gpid=&pid=f116" width=1 height=1 border=0></noscript>
+<noscript><img src="https://glean.pop6.com/images/common/glean.gif?rand=6259&site=break&session=111111111111+1279992940+174.129.237.157+&pwsid=&pagename=%2Funknown&pagestate=&country=United+States&city=&lang=english&level=&gpid=&pid=f116" width=1 height=1 border=0></noscript>
 </body></html>
