cit.com (archived on 2010-07-24)
{
  "alexa_rank": 268472,
  "analysis_subcorpus": true,
  "categories": "business;economyandfinance",
  "char_count": 8916,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.34,
  "homepage_snapshot_redirected_domain": "cit.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100804023420id_/http://www.cit.com/index.htm",
  "homepage_snapshot_url": "https://web.archive.org/web/20100805005838id_/http%3A//cit.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "cit.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100724233932id_/http%3A//www.cit.com/utility/privacy-policy/index.htm",
  "policy_title": "",
  "policy_url": "cit.com/utility/privacy-policy/index.htm",
  "sha1": "116d7ff44ee5fa5c62c5e4cd26ab377f7225d2a7",
  "simhash": 5938998773833616460,
  "simhash_updated": true,
  "site_hostname": "cit.com",
  "site_url": "http://cit.com",
  "smog": 15.86,
  "strict_updated": true,
  "timestamp": "20100724233932",
  "word_count": 1460,
  "year": 2010
}

--- a/c/ci/cit/cit.com.html
+++ b/c/ci/cit/cit.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cit.com privacy policy that was archived on 2010-01-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100103192305id_/http%3A//www.cit.com/utility/privacy-policy/index.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cit.com privacy policy that was archived on 2010-07-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100724233932id_/http%3A//www.cit.com/utility/privacy-policy/index.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
@@ -328,37 +328,19 @@
 <a class="" href="/about-cit/index.htm">About CIT</a>
 <ul>
 <li>
-<a href="/about-cit/mission/mission">Our Mission</a>
+<a href="/about-cit/our-businesses/index.htm">Our Businesses</a>
 </li>
 <li>
-<a href="/about-cit/vital-role/index.htm">Our Vital Role</a>
+<a href="/about-cit/our-vital-role/index.htm">Our Vital Role</a>
 </li>
 <li>
-<a href="/about-cit/cit-businesses/index.htm">CIT Businesses</a>
-</li>
-<li>
-<a href="/about-cit/cit-leadership/index.htm">CIT Leadership</a>
+<a href="/about-cit/our-history/index.htm">Our History</a>
 </li>
 <li>
 <a href="/about-cit/corporate-governance/index.htm">Corporate Governance</a>
 </li>
 <li>
-<a href="/about-cit/corporate-giving/index.htm">Corporate Giving</a>
-</li>
-<li>
-<a href="/about-cit/centennial/index.htm">Centennial</a>
-</li>
-<li>
-<a href="/about-cit/podcasts/index.htm">5 Minute Capital Podcast Series</a>
-</li>
-<li>
-<a href="/about-cit/case-studies/index.htm">Case Studies</a>
-</li>
-<li>
-<a href="/about-cit/capital-redefined-branding-campaign/index.htm">Capital Redefined</a>
-</li>
-<li>
-<a href="/about-cit/speakers-bureau/index.htm">CIT Executive Speakers Series </a>
+<a href="/about-cit/thought-leadership/index.htm">Thought Leadership</a>
 </li>
 <li>
 <a href="/about-cit/corporate-citizenship/index.htm">Corporate Citizenship</a>
@@ -399,9 +381,6 @@
 <ul>
 <li>
 <a href="/cit-worldwide/asia/index.htm">Asia</a>
-</li>
-<li>
-<a href="/cit-worldwide/australia-new-zealand/index.htm">Australia and New Zealand</a>
 </li>
 <li>
 <a href="/cit-worldwide/canada/index.htm">Canada</a>
@@ -456,10 +435,7 @@
 <a href="/investor-relations/StockQuotesCharts/index.htm">Stock Information</a>
 </li>
 <li>
-<a href="/investor-relations/DebtRatings/index.htm">Debt Ratings</a>
-</li>
-<li>
-<a href="/investor-relations/SecuritizationReports/index.htm">Securitization Reports</a>
+<a href="/investor-relations/FixedIncome/index.htm">Fixed Income</a>
 </li>
 <li>
 <a href="/investor-relations/material-request/index.htm">Material Request</a>
@@ -949,7 +925,7 @@ hbx.pec="";//ERROR CODES
 //END EDITABLE SECTION
 
 //REQUIRED SECTION. CHANGE "YOURSERVER" TO VALID LOCATION ON YOUR WEB SERVER (HTTPS IF FROM SECURE SERVER)
-</script><script language="javascript1.1" src="/wcmprod/groups/assets/documents/web-assets/hbx.js"></script>
+</script><script language="javascript1.1" src="/wcmprod/groups/assets/@wcm/@cit/documents/web-assets/omniture.js"></script>
 <!--END OMNITURE CODE-->
 			
  <!--SS_END_SNIPPET(fragment15,body)-->
