emagnews.com (archived on 2010-07-25)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "",
  "char_count": 1361,
  "classifier_probability": 0.83,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.95,
  "homepage_snapshot_redirected_domain": "emagnews.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100818220958id_/http://emagnews.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100818220958id_/http%3A//emagnews.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "emagnews.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100725085137id_/http%3A//emagnews.com/privacy-policy",
  "policy_title": "Privacy Policy",
  "policy_url": "emagnews.com/privacy-policy",
  "sha1": "a4386946586f29b959d138b3dcd804d07f7186e3",
  "simhash": 3369551612763947986,
  "simhash_updated": false,
  "site_hostname": "emagnews.com",
  "site_url": "http://emagnews.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20100725085137",
  "word_count": 232,
  "year": 2010
}

--- a/e/em/ema/emagnews.com.html
+++ b/e/em/ema/emagnews.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the emagnews.com privacy policy that was archived on 2010-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100623090002id_/http%3A//emagnews.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the emagnews.com privacy policy that was archived on 2010-07-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100725085137id_/http%3A//emagnews.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head profile="http://gmpg.org/xfn/11">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -180,7 +180,9 @@
 				<div id="rsidebar">
 
 
-  
+  <a href="http://webunky.com"><h1>Technology Blog </h1></a>
+<br>
+<a href="http://punchmunch.com"><h2>Entertainment Magazine</h2></a>
 
 
 		
@@ -212,7 +214,11 @@
 
 				<li>
 					<h2>Recent Posts</h2>
-					<ul>	<li><a href="http://emagnews.com/entertainment/20-06-2010/3699.html" title="Watch Sitcom Nadaaniyaan Episode 81 – 20th June 2010 Download">Watch Sitcom Nadaaniyaan Episode 81 – 20th June 2010 Download</a></li>
+					<ul>	<li><a href="http://emagnews.com/technology/29-06-2010/3709.html" title="iPhone 4GS Bugs">iPhone 4GS Bugs</a></li>
+	<li><a href="http://emagnews.com/technology/24-06-2010/3706.html" title="Microsoft Xbox 360 Released">Microsoft Xbox 360 Released</a></li>
+	<li><a href="http://emagnews.com/technology/24-06-2010/3704.html" title="iPhone 4G released: White iPhone Pre-Orders Started">iPhone 4G released: White iPhone Pre-Orders Started</a></li>
+	<li><a href="http://emagnews.com/magazine/celebrity/24-06-2010/3701.html" title="Miley Cyrus MuchMusic Awards 2010 – Crotch Shot">Miley Cyrus MuchMusic Awards 2010 – Crotch Shot</a></li>
+	<li><a href="http://emagnews.com/entertainment/20-06-2010/3699.html" title="Watch Sitcom Nadaaniyaan Episode 81 – 20th June 2010 Download">Watch Sitcom Nadaaniyaan Episode 81 – 20th June 2010 Download</a></li>
 	<li><a href="http://emagnews.com/sports/20-06-2010/3694.html" title="India won by 3 wickets">India won by 3 wickets</a></li>
 	<li><a href="http://emagnews.com/technology/17-06-2010/3692.html" title="Xbox 360 Review">Xbox 360 Review</a></li>
 	<li><a href="http://emagnews.com/entertainment/13-06-2010/3680.html" title="Lady Gaga New Single: CALA BOCA GALVAO">Lady Gaga New Single: CALA BOCA GALVAO</a></li>
@@ -228,10 +234,6 @@
 	<li><a href="http://emagnews.com/entertainment/07-06-2010/3627.html" title="Justin Bieber And His Girl Friend Arrested Today">Justin Bieber And His Girl Friend Arrested Today</a></li>
 	<li><a href="http://emagnews.com/entertainment/07-06-2010/3623.html" title="Watch Toy Story 3 Online Movie Review And Trailer">Watch Toy Story 3 Online Movie Review And Trailer</a></li>
 	<li><a href="http://emagnews.com/entertainment/07-06-2010/3621.html" title="Justin Bieber Arrested Rumors and Details">Justin Bieber Arrested Rumors and Details</a></li>
-	<li><a href="http://emagnews.com/sports/07-06-2010/3619.html" title="Watch England vs Platinum Stars Live Online Streaming">Watch England vs Platinum Stars Live Online Streaming</a></li>
-	<li><a href="http://emagnews.com/technology/07-06-2010/3615.html" title="WWDC Live Stream Online : iPhone 4G Release">WWDC Live Stream Online : iPhone 4G Release</a></li>
-	<li><a href="http://emagnews.com/sports/07-06-2010/3613.html" title="FIFA World Cup 2010 Live: Watch  Brazil vs Tanzania Football Match Online">FIFA World Cup 2010 Live: Watch  Brazil vs Tanzania Football Match Online</a></li>
-	<li><a href="http://emagnews.com/technology/07-06-2010/3610.html" title="Watch WWDC Live Stream: iPhone 4G Launched and Release date">Watch WWDC Live Stream: iPhone 4G Launched and Release date</a></li>
 </ul>
 				</li>
 
