--- a/e/ev/eve/evesaddiction.com.html
+++ b/e/ev/eve/evesaddiction.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the evesaddiction.com privacy policy that was archived on 2010-06-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100613015118id_/http%3A//www.evesaddiction.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the evesaddiction.com privacy policy that was archived on 2010-07-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100725152625id_/http%3A//www.evesaddiction.com/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>privacypolicy.html</title>
@@ -63,7 +63,7 @@
               <img src="/flash/header2.jpg" width="960" height="68" usemap="#topbanner" border="0" alt="Sterling Sivler Jewelry">
             </div> 
             <script type="text/javascript">
-              var fo = new FlashObject("/flash/header26.swf?custname=&ordertotal=$0.00&login=/login.jsp&logout=/servlet/com.beantree.catalog.AccountLogoutServlet?path=http://www.evesaddiction.com&gpm=&pb=&numberofitems=0&st=2051&dw=Sat","topbanner", "960", "68", "7", "#FFFFFF");
+              var fo = new FlashObject("/flash/header26.swf?custname=&ordertotal=$0.00&login=/login.jsp&logout=/servlet/com.beantree.catalog.AccountLogoutServlet?path=http://www.evesaddiction.com&gpm=&pb=&numberofitems=0&st=1026&dw=Sun","topbanner", "960", "68", "7", "#FFFFFF");
               fo.write("flashcontent");
             </script>
 			
@@ -163,7 +163,7 @@
 	    <img src="/images/undernav217.jpg" width="960" height="75" usemap="#undernav" border="0" alt="Sterling Sivler Jewelry">
             </div>
             <script type="text/javascript">
-              var fo = new FlashObject("/flash/undernav-banner114.swf?pb=&st=2051&dw=Sat&shortURL=null&countryTwoDigitCode=US", "topbanner", "960", "75", "7", "#FFFFFF");
+              var fo = new FlashObject("/flash/undernav-banner115.swf?pb=&st=1026&dw=Sun&shortURL=null&countryTwoDigitCode=US", "topbanner", "960", "75", "7", "#FFFFFF");
               fo.write("flashundernav");
             </script>
           </td>
@@ -591,7 +591,7 @@ display:none;
 
             
 <div class="leftnavbig5"><span style="font-size: 8pt; color: rgb(64, 68, 111);">
-  <p align="center"><a href="/freegift.html"><img src="/images/freegift_erz10550_small.jpg" border="0" width="150" height="60" alt="Free Gift on Orders Over $150" title="Free Gift on Orders Over $150"></a><br>
+  <p align="center"><a href="/freegift.html"><img src="/images/freegift_erp10013_small.jpg" border="0" width="150" height="60" alt="Free Gift on Orders Over $150" title="Free Gift on Orders Over $150"></a><br>
     <a href="http://www.evesaddiction.com/category_692.html"><img src="/images/oriana-bead-pandora-compatible.jpg" alt="Pandora Compatible Beads" title="Pandora Compatible Beads" width="150" height="100" border="0"></a></p>
 
 Why buy from Eve?</span></div>
@@ -726,14 +726,14 @@ Why buy from Eve?</span></div>
     </td>
   </tr>
 </tbody></table>
-<!--Promotion Disclaimer 
+<!--Promotion Disclaimer -->
 <table border="0" cellpadding="0" cellspacing="0" align="center">
-<tr class="footer" align="center"> 
-          <td> <a href="/freeshipping.html"><font color = "#99000">FREE Shipping - minimum $25 order required- Use coupon code EVE625 for $5.95 off using 1st Class Mail </font></a> 
+<tbody><tr class="footer" align="center"> 
+          <td> <a href="/freeshipping.html"><font color="#99000">Free Shipping - minimum $25 order required- Use coupon code BEACHBALL for $5.95 off using 1st Class Mail </font></a> 
 </td>
         </tr>
-		</table>
-End Promotion Disclaimer-->
+		</tbody></table>
+<!-- End Promotion Disclaimer-->
 <table border="0" cellpadding="0" cellspacing="0" align="center">
 <tbody><tr class="footer" align="center"> 
           <td> <a href="/"><font color="#99000"></font></a> 
@@ -813,6 +813,7 @@ End Promotion Disclaimer-->
 
 <table width="100" border="0" align="center" cellpadding="4" cellspacing="0">
   <tbody><tr>
+    <td height="41"><!-- (c) 2005, 2010. Authorize.Net is a registered trademark of CyberSource Corporation --> <div class="AuthorizeNetSeal"> <script type="text/javascript" language="javascript">var ANS_customer_id="a95b36ff-edfe-46be-a49a-4059f94639bf";</script> <script type="text/javascript" language="javascript" src="//verify.authorize.net/anetseal/seal.js"></script> <a href="http://www.authorize.net/" id="AuthorizeNetText" target="_blank">E-Commerce Solutions</a> </div> </td>
     <td height="41"><a href="/google_checkout.html"><img alt="Google Checkout" border="0" src="/images/google3.gif"></a></td>
     <td><a target="verify" href="http://www.controlscan.com/seal/verify2.php?subid=2433&amp;id=74"><img border="0" alt="Internet Security By ControlScan" oncontextmenu="alert('Copying Prohibited by Law - Trademark of ControlScan.com'); return false;" src="https://www.controlscan.com/seal/sealx2.php?subid=2433&amp;id=74"></a></td>
     <td>
